<?xml version="1.0"?>
<package>
  <name>beginner_tutorials</name>
  <version>0.0.0</version>
  <description>This is a beginner_tutorials package created by Jane</description>

  <maintainer email="htsai51@terpmail.umd.edu">Jane Tsai</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/htsai51/beginner_tutorials</url>

  <author email="htsai51@terpmail.umd.edu">Jane Tsai</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
